# StockBot

./: .gitignore  .pre-commit-config.yaml  backTesting.py  back_testing.py  backtest.py  config.py  dashboard.py  mi_backtest.py  pyproject.toml  requirements.txt  ruff.toml  update.py  update_metadata.py
notebooks/: clustering.ipynb
src/: broker.py  dashboard.py  gen.py  settings.py  stocks.py  stoploss.py
src/analysis/: features.py
src/api/: apis.py  gen.py  get_data.py  main.py  schemas.py
src/data/: apis.py  database.py  get_data.py  yahoo_api.py
src/db/: main.py  schemas.py
src/features/: build_features.py  features.py
src/time_db/: crud.py  database.py  models.py  schemas.py  update.py
strategies/: daily.py  live.py  multi_indicator.py
tests/: test_basic.py  test_functionality.py
tests/api/: conftest.py  test_db.py  test_schemas.py  test_yahoo.py  test_yf.py
tests/db/: conftest.py  test_db.py  test_schemas.py
utils/: gen.py  hdf5.py  market.py  plotting.py  tickers.py
