[tool.poetry]
name = "stockbot"
version = "0.1.0"
description = ""
authors = ["Acusick1 <andrewcusick13@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
requests = "^2.27.1"
h5py = "^3.6.0"
yfinance = "^0.1.70"
pandas = "^1.4.2"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
tables = "^3.7.0"
streamlit = "^1.9.2"
seaborn = "^0.11.2"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pandas-market-calendars = "^4.0"
Backtesting = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.9.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
